springbox-hystrix-dashboard/kubernetes/springbox-hystrix-dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: springbox
    component: hystrix-dashboard
  name: springbox-hystrix-dashboard
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: turbine-stream
    port: 8989
    protocol: TCP
    targetPort: 8989

  selector:
    app: springbox
    component: hystrix-dashboard
  type: ClusterIP
